--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
 </body>
 
 </html>
