--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 <input type="submit" value="Submit" name="Submit" class="btn-submit">
             </form>
         </div>
+        <div class="container">
+            <h2 class="container-header">Yang Harus Dilakukan</h2>
+            <div class="list-item" id="todos"></div>
+        </div>
     </div>
 
     <script type="module" src="assets/js/script.js"></script>
