--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <h2 class="container-header">Yang Harus Dilakukan</h2>
             <div class="list-item" id="todos"></div>
         </div>
+        <div class="container">
+            <h2 class="container-header">Yang Sudah Dilakukan</h2>
+            <div class="list-item" id="completed-todos"></div>
+        </div>
     </div>
 
     <script type="module" src="assets/js/script.js"></script>
